--- a/app/views/statuses/edit.html.erb
+++ b/app/views/statuses/edit.html.erb
@@ -1,3 +1,15 @@
+<%= form_for @status, html: {class: "form-horizontal"} do |f| %>
+<% if @project.errors.present? %>
+    <ul>
+      <div class= "alert alert-danger"
+        <% @project.errors.full_messages.each do |message| %>
+          <p style="color:red"><%= message %></p>
+          <% end %>
+      </div>
+    </ul>
+  <% end %>
+
+
 Edit Status
 
 <%= form_for @status do |f| %>
