--- a/app/views/statuses/new.html.erb
+++ b/app/views/statuses/new.html.erb
@@ -1,3 +1,14 @@
+<%= form_for @status, html: {class: "form-horizontal"} do |f| %>
+<% if @status.errors.present? %>
+    <ul>
+      <div class= "alert alert-danger"
+        <% @status.errors.full_messages.each do |message| %>
+          <p style="color:red"><%= message %></p>
+          <% end %>
+      </div>
+    </ul>
+  <% end %>
+
 <%= form_for @status do |f| %>
 
   <%= f.label :status %>
@@ -10,4 +21,6 @@
   <%= f.number_field :number_of_likes %>
 
   <%= f.submit %>
+<% end %>
+
 <% end %>
